[gd_scene load_steps=29 format=3 uid="uid://c0epbuu3r3wqy"]

[ext_resource type="Script" path="res://scenes/day_ex/game/battle_screen.gd" id="1_wg4ig"]
[ext_resource type="Theme" uid="uid://y72soc2heqau" path="res://themes/theme.tres" id="2_h3bdx"]
[ext_resource type="PackedScene" uid="uid://ctbphqc3meo8i" path="res://scenes/day_ex/game/battle_narration_box.tscn" id="2_mexfq"]
[ext_resource type="Texture2D" uid="uid://df5g8lttgw47a" path="res://art/day_ex/rpg_dialog_box.png" id="3_i3dd0"]
[ext_resource type="PackedScene" uid="uid://c3l2edgf8ciay" path="res://scenes/day_ex/game/party_container.tscn" id="4_qyjvj"]
[ext_resource type="FontFile" uid="uid://m3wbmrled4kn" path="res://art/fonts/kenney/kenney_mini.ttf" id="5_k0cqu"]
[ext_resource type="Texture2D" uid="uid://dgq5bvxdn1811" path="res://art/day_ex/battle_item_scraps.png" id="8_dp0aj"]
[ext_resource type="PackedScene" uid="uid://drjxqg6njqe0h" path="res://scenes/_shared/ui/h_selector.tscn" id="8_jgqt0"]
[ext_resource type="Script" path="res://scenes/day_ex/game/status_display.gd" id="8_kvjtm"]
[ext_resource type="Script" path="res://scenes/day_ex/game/status_label.gd" id="9_5uij3"]
[ext_resource type="Texture2D" uid="uid://bsq5d3kt6pl73" path="res://art/day_ex/battle_status_atk_buff.png" id="9_gb3qd"]
[ext_resource type="Script" path="res://scenes/day_ex/ui/group_visibility.gd" id="10_7g15t"]
[ext_resource type="Script" path="res://scenes/day_ex/game/action_selector.gd" id="10_xtk6e"]
[ext_resource type="PackedScene" uid="uid://d0cegcu8dki0c" path="res://scenes/day_ex/game/fighter.tscn" id="12_ivyo5"]
[ext_resource type="Shader" path="res://shaders/rpg_battle_char.gdshader" id="13_ibdsu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6y60"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bkdax"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = ExtResource("3_i3dd0")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="LabelSettings" id="LabelSettings_5wp2s"]
line_spacing = 0.0
font = ExtResource("5_k0cqu")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_14j6r"]
line_spacing = 0.0
font = ExtResource("5_k0cqu")

[sub_resource type="LabelSettings" id="LabelSettings_g1src"]
font = ExtResource("5_k0cqu")

[sub_resource type="LabelSettings" id="LabelSettings_vf0sj"]
line_spacing = 0.0
font = ExtResource("5_k0cqu")

[sub_resource type="LabelSettings" id="LabelSettings_vaxnq"]
font = ExtResource("5_k0cqu")

[sub_resource type="LabelSettings" id="LabelSettings_2otg2"]
font = ExtResource("5_k0cqu")
font_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hat3d"]
resource_local_to_scene = true
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oe4ql"]
resource_local_to_scene = true
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(1, 1, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_7f6hs"]
line_spacing = 0.0
font = ExtResource("5_k0cqu")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_5fx2w"]
line_spacing = 0.0
font = ExtResource("5_k0cqu")
font_size = 8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ds8e0"]
resource_local_to_scene = true
shader = ExtResource("13_ibdsu")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/flash_state = 0.0
shader_parameter/offset = Vector2(0, 0)

[node name="BattleScreen" type="CanvasLayer"]
script = ExtResource("1_wg4ig")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_h3bdx")
theme_override_styles/panel = SubResource("StyleBoxFlat_q6y60")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="BattleNarrationBox" parent="PanelContainer/VBoxContainer" instance=ExtResource("2_mexfq")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyPartyContainer" parent="PanelContainer/VBoxContainer" instance=ExtResource("4_qyjvj")]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerInfoContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 153)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bkdax")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PlayerInfoContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelLabel" type="Label" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "BUCHO LVL 9"
label_settings = SubResource("LabelSettings_5wp2s")

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BuchoHPLabel" type="Label" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "HP: 100/999"
label_settings = SubResource("LabelSettings_14j6r")
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="StatusDisplay" type="TextureRect" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_gb3qd")
stretch_mode = 3
script = ExtResource("8_kvjtm")

[node name="StatusLabel" type="Label" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "ATK+"
label_settings = SubResource("LabelSettings_g1src")
vertical_alignment = 1
uppercase = true
script = ExtResource("9_5uij3")

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer"]
layout_mode = 2

[node name="BuchoMPLabel" type="Label" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "MP: 100/999"
label_settings = SubResource("LabelSettings_vf0sj")
vertical_alignment = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="TreatTexture" type="TextureRect" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer2/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("8_dp0aj")
stretch_mode = 3

[node name="TreatCount" type="Label" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer2/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
text = "9"
label_settings = SubResource("LabelSettings_vaxnq")
vertical_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "ACTION"
label_settings = SubResource("LabelSettings_2otg2")

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionSelector" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_mode = 2
theme_override_constants/separation = 0
script = ExtResource("10_xtk6e")

[node name="CommandHSelector" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector" instance=ExtResource("8_jgqt0")]
layout_mode = 2
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath(".")
theme_override_styles/panel = SubResource("StyleBoxFlat_hat3d")
selector_text = ""
_options = ["Attack", "Attack"]
numbered_list = true
release_focus_on_selection = true
focus_color = Color(0.29366, 0.29366, 0.29366, 1)
text_font = ExtResource("5_k0cqu")
text_color = Color(1, 1, 1, 1)

[node name="ActionHSelector" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector" instance=ExtResource("8_jgqt0")]
layout_mode = 2
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath(".")
theme_override_styles/panel = SubResource("StyleBoxFlat_oe4ql")
selector_text = "  "
_options = ["Bright eyes", "Ability"]
numbered_list = true
release_focus_on_selection = true
focus_color = Color(0.294118, 0.294118, 0.294118, 1)
text_font = ExtResource("5_k0cqu")
text_color = Color(1, 1, 1, 1)

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Info"
label_settings = SubResource("LabelSettings_7f6hs")
uppercase = true

[node name="InfoLabel" type="Label" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Weakens 1 enemy's ATK, but strengthens their SPD."
label_settings = SubResource("LabelSettings_5fx2w")
autowrap_mode = 3

[node name="PlayerBackgroundTexture" type="TextureRect" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/PlayerBackgroundTexture"]
layout_mode = 2
offset_top = 1.0
offset_right = 212.0
offset_bottom = 73.0
size_flags_vertical = 3

[node name="PlayerChar" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/PlayerBackgroundTexture/CenterContainer" instance=ExtResource("12_ivyo5")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ds8e0")
layout_mode = 2
size_flags_vertical = 3
texture = null

[node name="PlayerCommandsGroupVisibility" type="Control" parent="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer" node_paths=PackedStringArray("controls")]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("10_7g15t")
controls = [NodePath("../HBoxContainer3"), NodePath("../InfoLabel"), NodePath("../ActionSelector")]
referenced_controls_visibility = false

[connection signal="current_option_changed" from="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector" to="." method="_on_action_selector_current_option_changed"]
[connection signal="focus_entered" from="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector" to="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector" method="_on_focus_entered"]
[connection signal="current_option_index_changed" from="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector/CommandHSelector" to="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector" method="_on_command_h_selector_current_option_index_changed"]
[connection signal="selected" from="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector/CommandHSelector" to="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector" method="_on_command_h_selector_selected"]
[connection signal="current_option_index_changed" from="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector/ActionHSelector" to="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector" method="_on_action_h_selector_current_option_index_changed"]
[connection signal="selected" from="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector/ActionHSelector" to="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/ActionSelector" method="_on_action_h_selector_selected"]
[connection signal="referenced_controls_visibility_changed" from="PanelContainer/VBoxContainer/PlayerInfoContainer/VBoxContainer/PlayerCommandsGroupVisibility" to="." method="_on_player_commands_group_visibility_referenced_controls_visibility_changed"]
